--- a/plugins.yml
+++ b/plugins.yml
@@ -1,6 +1,6 @@
-name: SkyWars
+name: Colormatch
 author: MHBG
 main: colorMatch/ MHBG
-version: 1.0.0
+version: 1.1.0
 api: 3.0.0
 depend: ["FormAPI"]
